# msimplepir

./: CMakeLists.txt  README.md
include/: database.h  parameter.h  simplepir.h  util.h
src/: CMakeLists.txt  database.cpp  parameter.cpp  simplepir.cpp  util.cpp
tests/: CMakeLists.txt  mlwe2lwe-test.cpp  mult-test.cpp  simplepir-test.cpp  test-mlwe.cpp  test-mlwe2lwe.cpp  test-mult.cpp  test-ntt.cpp  test-simplepir.cpp
